--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/sizeguide/_sizeguide.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/sizeguide/_sizeguide.scss
@@ -33,7 +33,9 @@
 
       #product-image-gallery,
       #lightSlider {
-        height: 31rem;
+        @include breakpoint($desktop) {
+          height: 31rem;
+        }
       }
     }
   }
